load("@rules_rust//rust:defs.bzl", "rust_binary")

exports_files(
    [
        ".rustfmt.toml",
        "clippy.toml",
    ],
    visibility = ["//visibility:public"],
)

rust_binary(
    name = "nativelink",
    srcs = [
        "src/bin/nativelink.rs",
    ],
    deps = [
        "//nativelink-config",
        "//nativelink-error",
        "//nativelink-metric",
        "//nativelink-metric-collector",
        "//nativelink-scheduler",
        "//nativelink-service",
        "//nativelink-store",
        "//nativelink-util",
        "//nativelink-worker",
        "@crates//:async-lock",
        "@crates//:axum",
        "@crates//:clap",
        "@crates//:futures",
        "@crates//:hyper-1.5.1",
        "@crates//:hyper-util",
        "@crates//:mimalloc",
        "@crates//:opentelemetry",
        "@crates//:opentelemetry-prometheus",
        "@crates//:opentelemetry_sdk",
        "@crates//:parking_lot",
        "@crates//:prometheus",
        "@crates//:rustls-pemfile",
        "@crates//:scopeguard",
        "@crates//:serde_json",
        "@crates//:serde_json5",
        "@crates//:tokio",
        "@crates//:tokio-rustls",
        "@crates//:tonic",
        "@crates//:tower",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
    ],
)

filegroup(
    name = "docs",
    srcs = [
        "//nativelink-config:docs",
        "//nativelink-error:docs",
        "//nativelink-macro:docs",
        "//nativelink-proto:docs",
        "//nativelink-scheduler:docs",
        "//nativelink-service:docs",
        "//nativelink-store:docs",
        "//nativelink-util:docs",
        "//nativelink-worker:docs",
    ],
)

test_suite(
    name = "doctests",
    tests = [
        "//nativelink-config:doc_test",
        "//nativelink-error:doc_test",
        "//nativelink-macro:doc_test",
        "//nativelink-proto:doc_test",
        "//nativelink-scheduler:doc_test",
        "//nativelink-service:doc_test",
        "//nativelink-store:doc_test",
        "//nativelink-util:doc_test",
        "//nativelink-worker:doc_test",
    ],
)

genrule(
    name = "dummy_test_sh",
    outs = ["dummy_test.sh"],
    cmd = "echo \"sleep .1;   echo $$(printf '=%.0s' {1..100})\" > \"$@\"",
)

sh_test(
    name = "dummy_test",
    timeout = "short",
    srcs = [":dummy_test_sh"],
)
