module(
    name = "nativelink",
    version = "1.0.0-rc3",
    compatibility_level = 0,
)

bazel_dep(name = "rules_cc", version = "0.2.8")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_python", version = "1.3.0")  # TODO(palfrey): Bump.
bazel_dep(name = "rules_shell", version = "0.6.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.13",
)
use_repo(python, python = "python_versions")

bazel_dep(name = "rules_rust", version = "0.68.1")
archive_override(
    module_name = "rules_rust",
    integrity = "sha256-yKqAbPYGZnmsI0YyQe6ArWkiZdrQRl9RERy74wuJA1I=",
    patch_strip = 1,
    patches = ["//tools:rules_rust-musl-platforms.diff"],
    urls = [
        "https://github.com/bazelbuild/rules_rust/releases/download/0.68.1/rules_rust-0.68.1.tar.gz",
    ],
)

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//nativelink-config:Cargo.toml",
        "//nativelink-error:Cargo.toml",
        "//nativelink-macro:Cargo.toml",
        "//nativelink-metric:Cargo.toml",
        "//nativelink-metric/nativelink-metric-macro-derive:Cargo.toml",
        "//nativelink-proto:Cargo.toml",
        "//nativelink-scheduler:Cargo.toml",
        "//nativelink-redis-tester:Cargo.toml",
        "//nativelink-service:Cargo.toml",
        "//nativelink-store:Cargo.toml",
        "//nativelink-util:Cargo.toml",
        "//nativelink-worker:Cargo.toml",
    ],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "aarch64-unknown-linux-musl",
        "arm-unknown-linux-gnueabi",
        "armv7-unknown-linux-gnueabi",
        "x86_64-apple-darwin",
        "x86_64-pc-windows-msvc",
        "x86_64-unknown-linux-gnu",
        "x86_64-unknown-linux-musl",
    ],
)
use_repo(crate, "crates")

# NativeLink uses Local Remote Execution for Rust by default which automatically
# handles Rust toolchain configuration via Nix.
#
# If you build outside of Nix you'll have to register these toolchains
# explicitly by passing `--extra_toolchains=@rust_toolchains//:all` to your
# Bazel invocation.
#
# WARNING: This configuration exists entirely as a convenience option and
#          migration and is not a supported way of building production
#          grade nativelink executables. It may be removed at any point in time.
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",

    # These should always follow the versions from LRE.
    rust_analyzer_version = "nightly/2026-02-26",
    rustfmt_version = "nightly/2026-02-26",
    sha256s = {
        # Update the shas with update-module-hashes
        # BEGIN SHAS
        "2026-02-26/cargo-nightly-x86_64-unknown-linux-gnu.tar.xz": "15176b1640c14499b8427b0f52872911832280e425b2ebb27df3a118d1869b9e",
        "2026-02-26/clippy-nightly-x86_64-unknown-linux-gnu.tar.xz": "d5621f19ec95f3da739b12916687f8146f4da99b1c9967d444fd5d3e3a980eda",
        "2026-02-26/llvm-tools-nightly-x86_64-unknown-linux-gnu.tar.xz": "f81fe3b00b46a62de7d2a73489ea667954f9c86c2f55ff23424a31e8e4b1005c",
        "2026-02-26/rust-std-nightly-x86_64-unknown-linux-gnu.tar.xz": "519849ce546c415b56a451f18625ec94aa4585070df01aeaf9790f89fcd5bf6e",
        "2026-02-26/rustc-nightly-aarch64-apple-darwin.tar.xz": "1b73740e1fbda8b37abe5650dc7f297f58def5afccb330bc5e7801fd7c8d0b44",
        "2026-02-26/rustc-nightly-x86_64-unknown-linux-gnu.tar.xz": "3e1a0e9f551065f3475c2ac70fb14d724a63427ab90953a8af3781ec09a1ab1d",
        "2026-02-26/rustfmt-nightly-aarch64-apple-darwin.tar.xz": "d176e10ab2bd9162687307cfe54b11040efe66315dc09313926f61c610f19b3f",
        "2026-02-26/rustfmt-nightly-x86_64-unknown-linux-gnu.tar.xz": "b2889159f69ccffd1336ef007939b1239b6d35fa826aacdcf69de038179f0542",
        "cargo-1.93.1-aarch64-apple-darwin.tar.xz": "ecd50b093656061366c5af1184af10d883f21bddb482a9c2142fe860c0f671b2",
        "cargo-1.93.1-x86_64-unknown-linux-gnu.tar.xz": "dbf12e8fd2a245a6bdd9f6c8df267cb2c25b0c56866ee91d8321337df0a00ddb",
        "clippy-1.93.1-aarch64-apple-darwin.tar.xz": "33d57654b0f19360cc4deecbaf248586f89ce9d345df2d54ee8d5541cf7c9f95",
        "clippy-1.93.1-x86_64-unknown-linux-gnu.tar.xz": "60c0ce83ecc1700de724404a928c30d096c178a610c6707d4f06cee25284cc02",
        "llvm-tools-1.93.1-aarch64-apple-darwin.tar.xz": "d61834568e6e591db13ad235e09c3c65e2f10c099c29bfd8eec018f6c9f55462",
        "llvm-tools-1.93.1-x86_64-unknown-linux-gnu.tar.xz": "f32c5405d7765ffd18554e01f59eff1db32e22813a529425f4ad8903722b594e",
        "rust-std-1.93.1-aarch64-apple-darwin.tar.xz": "dd278e6eb993ddffb190442ca11ed1e118c1edaf04114910e3c8c652f6423f65",
        "rust-std-1.93.1-x86_64-unknown-linux-gnu.tar.xz": "82c4e41268f1741e4eb68796aeb6ca5042406ae858dd56144155c4ef8d87d8b6",
        "rustc-1.93.1-aarch64-apple-darwin.tar.xz": "d103a0ee04c121b30cf061c7ad1456daaebd7ff0a7ea5fdb64acf92d86cb25fd",
        "rustc-1.93.1-x86_64-unknown-linux-gnu.tar.xz": "b9db2636f5a101c4cdaf46a26f8a0c8e4b5767ecdb02ae9c7ccc3ead577732bc",
        # END SHAS
    },
    versions = [
        "1.93.1",
        "nightly/2026-02-26",
    ],
)
use_repo(rust, "rust_toolchains")

bazel_dep(name = "toolchains_protoc", version = "0.4.3")

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v30.2",
)

# Local remote execution.
bazel_dep(name = "local-remote-execution", version = "0.0.0")
local_path_override(
    module_name = "local-remote-execution",
    path = "local-remote-execution",
)
